Bug #210984 --> let extensions extend entries in the account manager. This allows extensions like PGP/mime to directly add panels to the account manager.

r/sr=sspitzer